@@ -24,6 +24,9 @@ Release 2.7.1 - UNRELEASED
 
   BUG FIXES
 
+    HADOOP-11837. After HADOOP-11754, oozie fails to stop cleanly. 
+    (Bowen Zhang via jitendra)
+
 Release 2.7.0 - UNRELEASED
 
   INCOMPATIBLE CHANGES
